tests/expectations/compiler/function/undefined_fail.out
DCE_ENABLED:
Error [ETYC0372005]: Unknown function `my_function`
    --> compiler-test:4:9
     |
   4 |         my_function();
     |         ^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372005]: Unknown function `my_function`
    --> compiler-test:4:9
     |
   4 |         my_function();
     |         ^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^
